# PP_1

./: CMakeLists.txt  README.md  plot_clusters.py  plot_speedups.py
include/: DataLoader.h  Dataset.h  Kmeans.h  ParallelKmeans.h  Point.h
plots/: clustered_data.csv  clustered_data_sequential.csv
src/: DataLoader.cpp  Dataset.cpp  Kmeans.cpp  ParallelKmeans.cpp  Point.cpp  main.cpp  main_parallel.cpp
